2004-04-12  Michael Peppler  <mpeppler@peppler.org>

	* src/cmd_bcp.c (cmd_bcp): Add logic to use the correct
	BLK_VERSION_xxx value corresponding to the CS_VERSION_xxx used
	when Client Library was initialized and the CS_CONTEXT was
	allocated in cmd_connect.h

	* src/sqsh_global.c (g_cs_ver): Add global variable to hold the
	value of the current CS_VERSION_xxx. Needed in cmd_bcp.c to
	correctly initialize the BLK command.

	* configure.in: Fixed configure script issues with obsolete macros
	and incorrect handling of libraries for the readline test.

2004-04-10  Michael Peppler  <mpeppler@peppler.org>

	* src/dsp_meta.c (dsp_meta): Applied patch from Andrew Pimlott to
	handle sqsh hanging when one interrupts output that is piped to
	another program.

	* src/sqsh_expand.c (expand_variable): Applied patch from Michael
	Chepelev for core dumps when expanding $$ $, etc. This bit of code
	is currently #ifdef'd pending complete testing of variable
	expansion. 

	* src/cmd_func.c (cmd_call): Apply patch from Bin Mu to fix
	segfault when using \call without a function name.

	* src/cmd_bcp.c (cmd_bcp): Apply patch from Onno van der Linden to
	avoid potential divide by 0 error.

2004-04-09  Michael Peppler  <mpeppler@peppler.org>

	* src/dsp_desc.c (dsp_desc_fetch): Add support for CS_DATE_TYPE
	and CS_TIME_TYPE.

	* src/dsp_meta.c (dsp_meta_transtate): Add support for
	CS_DATE_TYPE and CS_TIME_TYPE.

	* src/dsp_desc.c (dsp_desc_fetch): CS_ROW_FAIL return codes from
	ct_fetch should not be considered fatal errors for the query, as
	they are usually the result of data overflow/truncation.

	* src/cmd_connect.c (cmd_connect): Add logic to use the the
	highest CS_VERSION_xxx value that is available at run-time. This
	should enable wide varchar() columns to be retrieved correctly
	when sqsh is built with 12.5.x OpenClient.

$Id: ChangeLog,v 1.3 2004/04/11 15:14:32 mpeppler Exp $

Changes from 1.8 to 2.0
   o  New build system/directory structure. Should build against