@@ -39,20 +39,20 @@
 
 typedef enum
 {
-	STDIN_FILE,
-	STDIN_BUFFER
+    STDIN_FILE,
+    STDIN_BUFFER
 }
 stdin_type_e;
 
 typedef struct _stdin_st
 {
-	stdin_type_e  stdin_type;     /* Type of input */
-	int           stdin_isatty;   /* Is this a tty? */
-	FILE         *stdin_file;     /* File input */
-	char         *stdin_buf;      /* Buffer input */
-	char         *stdin_buf_cur;  /* CUrrent pointer int buffer */
-	char         *stdin_buf_end;  /* Pointer to last byte of input */
-	int           stdin_buf_read; /* Amount processed */
+    stdin_type_e  stdin_type;     /* Type of input */
+    int           stdin_isatty;   /* Is this a tty? */
+    FILE         *stdin_file;     /* File input */
+    char         *stdin_buf;      /* Buffer input */
+    char         *stdin_buf_cur;  /* CUrrent pointer int buffer */
+    char         *stdin_buf_end;  /* Pointer to last byte of input */
+    int           stdin_buf_read; /* Amount processed */
 }
 stdin_t;
 
@@ -69,32 +69,32 @@ static int      sg_stdin_cur = 0;
 ** Set the current input source as a buffer (string).
 */
 int sqsh_stdin_buffer( buf, len )
-	char   *buf;
-	int     len;
+    char   *buf;
+    int     len;
 {
-	if (sg_stdin_cur == MAX_STDIN_STACK-1)
-	{
-		sqsh_set_error(SQSH_E_RANGE, 
-			"sqsh_stdin_buffer: STDIN buffer stack full" );
-		return(-1);
-	}
-	sg_stdin_stack[sg_stdin_cur].stdin_type     = STDIN_BUFFER;
-	sg_stdin_stack[sg_stdin_cur].stdin_isatty   = 0;
-	sg_stdin_stack[sg_stdin_cur].stdin_buf      = buf;
-	sg_stdin_stack[sg_stdin_cur].stdin_buf_cur  = buf;
+    if (sg_stdin_cur == MAX_STDIN_STACK-1)
+    {
+        sqsh_set_error(SQSH_E_RANGE, 
+            "sqsh_stdin_buffer: STDIN buffer stack full" );
+        return(-1);
+    }
+    sg_stdin_stack[sg_stdin_cur].stdin_type     = STDIN_BUFFER;
+    sg_stdin_stack[sg_stdin_cur].stdin_isatty   = 0;
+    sg_stdin_stack[sg_stdin_cur].stdin_buf      = buf;
+    sg_stdin_stack[sg_stdin_cur].stdin_buf_cur  = buf;
 
-	if (len >= 0)
-	{
-		sg_stdin_stack[sg_stdin_cur].stdin_buf_end = (buf + len);
-	}
-	else
-	{
-		sg_stdin_stack[sg_stdin_cur].stdin_buf_end = NULL;
-	}
+    if (len >= 0)
+    {
+        sg_stdin_stack[sg_stdin_cur].stdin_buf_end = (buf + len);
+    }
+    else
+    {
+        sg_stdin_stack[sg_stdin_cur].stdin_buf_end = NULL;
+    }
 
-	++sg_stdin_cur;
+    ++sg_stdin_cur;
 
-	return(0);
+    return(0);
 }
 
 /*
@@ -103,20 +103,20 @@ int sqsh_stdin_buffer( buf, len )
 ** Set the current input source as a file (string).
 */
 int sqsh_stdin_file( file )
-	FILE  *file;
+    FILE  *file;
 {
-	if (sg_stdin_cur == MAX_STDIN_STACK-1)
-	{
-		sqsh_set_error(SQSH_E_RANGE, 
-			"sqsh_stdin_file: STDIN buffer stack full" );
-		return(-1);
-	}
-	sg_stdin_stack[sg_stdin_cur].stdin_type     = STDIN_FILE;
-	sg_stdin_stack[sg_stdin_cur].stdin_isatty   = isatty(fileno(file));
-	sg_stdin_stack[sg_stdin_cur].stdin_file     = file;
-	++sg_stdin_cur;
+    if (sg_stdin_cur == MAX_STDIN_STACK-1)
+    {
+        sqsh_set_error(SQSH_E_RANGE, 
+            "sqsh_stdin_file: STDIN buffer stack full" );
+        return(-1);
+    }
+    sg_stdin_stack[sg_stdin_cur].stdin_type     = STDIN_FILE;
+    sg_stdin_stack[sg_stdin_cur].stdin_isatty   = isatty(fileno(file));
+    sg_stdin_stack[sg_stdin_cur].stdin_file     = file;
+    ++sg_stdin_cur;
 
-	return(0);
+    return(0);
 }
 
 /*
@@ -126,27 +126,27 @@ int sqsh_stdin_file( file )
 */
 int sqsh_stdin_pop()
 {
-	if (sg_stdin_cur > 0)
-		--sg_stdin_cur;
-	return(0);
+    if (sg_stdin_cur > 0)
+        --sg_stdin_cur;
+    return(0);
 }
 
 int sqsh_stdin_isatty()
 {
-	stdin_t   *sin;
+    stdin_t   *sin;
 
-	if (sg_stdin_cur == 0)
-	{
-		return(False);
-	}
+    if (sg_stdin_cur == 0)
+    {
+        return(False);
+    }
 
-	sin = &(sg_stdin_stack[sg_stdin_cur-1]);
+    sin = &(sg_stdin_stack[sg_stdin_cur-1]);
 
-	if (sin->stdin_isatty)
-	{
-		return(True);
-	}
-	return(False);
+    if (sin->stdin_isatty)
+    {
+        return(True);
+    }
+    return(False);
 }
 
 /*
@@ -155,93 +155,93 @@ int sqsh_stdin_isatty()
 ** Read a string from stdin.
 */
 char* sqsh_stdin_fgets( buf, len )
-	char    *buf;
-	int      len;
+    char    *buf;
+    int      len;
 {
-	stdin_t   *sin;
-	char      *str;
-	char      *dptr;
-	char      *eptr;
+    stdin_t   *sin;
+    char      *str;
+    char      *dptr;
+    char      *eptr;
 
-	if (sg_stdin_cur == 0)
-	{
-		sqsh_set_error(SQSH_E_RANGE, 
-			"sqsh_stdin_file: STDIN has been closed" );
-		return((char*)NULL);
-	}
+    if (sg_stdin_cur == 0)
+    {
+        sqsh_set_error(SQSH_E_RANGE, 
+            "sqsh_stdin_file: STDIN has been closed" );
+        return((char*)NULL);
+    }
 
-	sin = &(sg_stdin_stack[sg_stdin_cur-1]);
+    sin = &(sg_stdin_stack[sg_stdin_cur-1]);
 
-	if (sin->stdin_type == STDIN_FILE)
-	{
-		str = fgets( buf, len, sin->stdin_file );
+    if (sin->stdin_type == STDIN_FILE)
+    {
+        str = fgets( buf, len, sin->stdin_file );
 
-		if (str == NULL)
-		{
-			if (feof( sin->stdin_file ))
-			{
-				sqsh_set_error( SQSH_E_NONE, NULL );
-			}
-			else
-			{
-				sqsh_set_error( SQSH_E_RANGE, "%s", strerror(errno) );
-			}
-		}
+        if (str == NULL)
+        {
+            if (feof( sin->stdin_file ))
+            {
+                sqsh_set_error( SQSH_E_NONE, NULL );
+            }
+            else
+            {
+                sqsh_set_error( SQSH_E_RANGE, "%s", strerror(errno) );
+            }
+        }
 
-		return(str);
-	}
+        return(str);
+    }
 
 
-	dptr = buf;
-	eptr = buf + len;
+    dptr = buf;
+    eptr = buf + len;
 
-	if (sin->stdin_buf_end == NULL)
-	{
-		if (*sin->stdin_buf_cur == '\0')
-		{
-			sqsh_set_error( SQSH_E_NONE, NULL );
-			return((char*)NULL);
-		}
+    if (sin->stdin_buf_end == NULL)
+    {
+        if (*sin->stdin_buf_cur == '\0')
+        {
+            sqsh_set_error( SQSH_E_NONE, NULL );
+            return((char*)NULL);
+        }
 
-		while (*(sin->stdin_buf_cur) != '\0' && 
-			dptr < eptr)
-		{
-			*dptr++ = *sin->stdin_buf_cur;
+        while (*(sin->stdin_buf_cur) != '\0' && 
+            dptr < eptr)
+        {
+            *dptr++ = *sin->stdin_buf_cur;
 
-			if (*sin->stdin_buf_cur == '\n')
-			{
-				++sin->stdin_buf_cur;
-				break;
-			}
+            if (*sin->stdin_buf_cur == '\n')
+            {
+                ++sin->stdin_buf_cur;
+                break;
+            }
 
-			++sin->stdin_buf_cur;
-		}
-	}
-	else
-	{
-		if (sin->stdin_buf_cur == sin->stdin_buf_end)
-		{
-			sqsh_set_error( SQSH_E_NONE, NULL );
-			return((char*)NULL);
-		}
+            ++sin->stdin_buf_cur;
+        }
+    }
+    else
+    {
+        if (sin->stdin_buf_cur == sin->stdin_buf_end)
+        {
+            sqsh_set_error( SQSH_E_NONE, NULL );
+            return((char*)NULL);
+        }
 
-		while (sin->stdin_buf_cur < sin->stdin_buf_end && 
-			dptr < eptr)
-		{
-			if (*sin->stdin_buf_cur == '\n')
-			{
-				++sin->stdin_buf_cur;
-				break;
-			}
+        while (sin->stdin_buf_cur < sin->stdin_buf_end && 
+            dptr < eptr)
+        {
+            if (*sin->stdin_buf_cur == '\n')
+            {
+                ++sin->stdin_buf_cur;
+                break;
+            }
 
-			++sin->stdin_buf_cur;
-		}
-	}
+            ++sin->stdin_buf_cur;
+        }
+    }
 
-	if (dptr < (eptr-1))
-	{
-		*dptr = '\0';
-	}
+    if (dptr < (eptr-1))
+    {
+        *dptr = '\0';
+    }
 
-	return(buf);
+    return(buf);
 }
